src/test/ui/issues/issue-20616-1.stderr
error: expected one of `,`, `:`, or `>`, found `T`
  --> $DIR/issue-20616-1.rs:9:16
   |
LL | type Type_1<'a T> = &'a T;
   |                ^ expected one of `,`, `:`, or `>`

error: aborting due to previous error

